NMT: Memory leak when encountering out of memory error while initializing memory snapshot

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs24
    • Affects Version/s: hs24, hs25
    • Component/s: hotspot
    • Environment:

      There is chance that NMT can allocate memSnapshot object, but fail to initialize the object due to out of memory.

      MemSnaphot object should be released in the situation.

    • b41

            Assignee:
            Zhengyu Gu
            Reporter:
            Zhengyu Gu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: